--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Welcome to BloccIt</h1>
+<p id="index-title">
+  This is the home page for BloccIt.
+</p>
+
+<div class="posts">Post 1 goes here.</div>
+ <div class="posts">Post 2 goes here.</div>
+
+  <section>I am the content in a section element.</section>
