--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -22,3 +22,11 @@ h1 {
   margin: 5px 5px 5px 5px;
   padding: 5px 5px 5px 5px;
 }
+
+.socialbutton {
+  color: gray;
+  height: 20px;
+  padding: 5 5 5 5;
+  width: 100px;
+  text-align: center;
+}
