--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About BloccIt</h1>
  <p>Created by: Christopher Roper</p>
+
+<button class="socialbutton"><%= link_to "Follow me", "https://www.facebook.com/roperxyz" %></button>
