--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Advertisements#index</h1>
-<p>Find me in app/views/advertisements/index.html.erb</p>
+<h1>All Advertisement</h1>
+<% @advertisement.each do |advertisement| %>
+  <div class="media">
+    <div class="media-body">
+      <h4 class="media-heading">
+        <%= link_to advertisement.title, advertisement %>
+      </h4>
+    </div>
+  </div>
+<% end %>
