--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1><%= @advertisement.title %></h1>
+<p><%= @advertisement.body %></p>
+<p><%= @advertisement.price %></p>
