--- a/app/views/advertisements/show.html.erb
+++ b/app/views/advertisements/show.html.erb
@@ -1,3 +1,2 @@
-<h1><%= advertisement.title %></h1>
-<p><%= advertisement.body %></p>
-<p><%= advertisement.price %></p>
+<h1>Advertisements#show</h1>
+<p>Find me in app/views/advertisements/show.html.erb</p>
