--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @advertisement.title %></h1>
-<p><%= @advertisement.body %></p>
-<p><%= @advertisement.price %></p>
+<h1><%= advertisement.title %></h1>
+<p><%= advertisement.body %></p>
+<p><%= advertisement.price %></p>
