--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Questions#edit</h1>
-<p>Find me in app/views/questions/edit.html.erb</p>
+<h1>Edit Question</h1>
+
+ <div class="row">
+   <div class="col-md-4">
+     <p>Guidelines for questions</p>
+     <ul>
+       <li>Don't mention any day that ends in "y".</li>
+       <li>Must start with the words, "Why not".</li>
+       <li>The incessant use of hashquestions will get you banned.</li>
+     </ul>
+   </div>
+   <div class="col-md-8">
+     <%= form_for @question do |f| %>
+       <div class="form-group">
+         <%= f.label :title %>
+         <%= f.text_field :title, class: 'form-control', placeholder: "Enter question title" %>
+       </div>
+       <div class="form-group">
+         <%= f.label :body %>
+         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter question body" %>
+       </div>
+       <div class="form-group">
+         <%= f.label :resolved %>
+         <%= f.check_box :resolved %>
+       </div>
+       <div class="form-group">
+         <%= f.submit "Save", class: 'btn btn-success' %>
+       </div>
+     <% end %>
+   </div>
+ </div>
