--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,11 @@
 <h1>All Questions</h1>
+<%= link_to "New Question", new_question_path(@question), class: 'btn btn-success' %>
 <% @questions.each do |question| %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <%= link_to question.title, question %>
+        <%= link_to question.title, question, question.resolved %>
+        <%= check_box("tag", question.id) %>
       </h4>
     </div>
   </div>
