--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Questions#show</h1>
-<p>Find me in app/views/questions/show.html.erb</p>
+<h1><%= @question.title %></h1>
+ <h2><%=check_box("tag", @question.resolved) %></h2>
+ <div class="row">
+   <div class="col-md-8">
+     <p><%= @question.body %></p>
+   <div class="col-md-4">
+ <!-- #5 -->
+     <%= link_to "Edit", edit_question_path(@question), class: 'btn btn-success' %>
+     <%= link_to "Delete Post", @question, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this question?'} %>
+   </div>
+ </div>
