--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,8 +4,8 @@
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <%= link_to question.title, question, question.resolved %>
-        <%= check_box("tag", question.id) %>
+        <%= link_to question.title,question %>
+
       </h4>
     </div>
   </div>
