--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -20,8 +20,7 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter question body" %>
        </div>
        <div class="form-group">
-         <%= f.label :resolved %>
-         <%= f.check_box :resolved %>
+         <p> Resolved? </p><%= f.check_box :resolved %>
        </div>
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
