--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -22,7 +22,11 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
        </div>
        <div class="form-group">
+        <%= f.label :resolved %>
+        <%= f.check_box :resolved%>
+       </div>
 
+       <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
