--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,9 @@
 <h1><%= @question.title %></h1>
- <h2><%=check_box("tag", @question.resolved) %></h2>
+<h2>Question Resolved? <%= @question.resolved %></h2>
  <div class="row">
    <div class="col-md-8">
      <p><%= @question.body %></p>
+
    <div class="col-md-4">
  <!-- #5 -->
      <%= link_to "Edit", edit_question_path(@question), class: 'btn btn-success' %>
