--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <div class="container">
     <ul class="nav nav-tabs">
       <li><%= link_to "Bloccit", root_path %></li>
+      <li><%= link_to "Topics", topics_path %></li>
       <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Posts", posts_path %></li>
   </ul>
 
   <% if flash[:notice] %>
