Sponsored Posts cleanup - 6 tests still failing

--- a/app/views/sponsored_posts/new.html.erb
+++ b/app/views/sponsored_posts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Sponsored Post</h1>
+<h1>New Sponsored Post</h1>
 
  <div class="row">
    <div class="col-md-4">
@@ -10,9 +10,11 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for [@sponsoredpostspost.topic, @sponsoredpost] do |f| %>
+     <%= form_for [@topic, @sponsored_post] do |f| %>
        <div class="form-group">
+
          <%= f.label :title %>
+
          <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
        </div>
        <div class="form-group">
@@ -20,6 +22,7 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
        </div>
        <div class="form-group">
+
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
