--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,9 @@
 <h1>New Post</h1>
 
  <div class="row">
+
    <div class="col-md-4">
+
      <p>Guidelines for posts</p>
      <ul>
        <li>Make sure it rhymes.</li>
@@ -9,22 +11,9 @@
        <li>The incessant use of hashtags will get you banned.</li>
      </ul>
    </div>
+
    <div class="col-md-8">
-     <%= form_for [@topic, @post] do |f| %>
-       <div class="form-group">
 
-         <%= f.label :title %>
-
-         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
-       </div>
-       <div class="form-group">
-         <%= f.label :body %>
-         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-       </div>
-       <div class="form-group">
-
-         <%= f.submit "Save", class: 'btn btn-success' %>
-       </div>
-     <% end %>
+     <%= render partial: 'form', locals: { topic: @post.topic, post: @post } %>
    </div>
  </div>
