--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -4,8 +4,8 @@
 
  <div class="row">
    <div class="col-md-8">
-     <h2>Email <% @user.email%></h2>
-     <h2>Name: <% @user.name %></h2>
+    <p>Email:<%= @user.email %></p>
+    <p>Name:<%= @user.name %></p>
    </div>
 </div>
    <div class="col-md-4">
