--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 .user-info {
-   margin-top: 9px;
+   margin-top: 5px;
+   margin-right: 5px;
+   display: inline-block;
  }
 
  .nav {
