--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,8 +17,9 @@
        </div>
      <% end %>
    </div>
-   <div class="col-md-4">
-
+   <% if user_is_authorized_for_topics? %>
+      <div class="col-md-4">
      <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
-   </div>
+      </div>
+   <% end %>
  </div>
