--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,9 +9,13 @@
    <div class="col-md-8">
      <p><%= @post.body %></p>
    </div>
-   <div class="col-md-4">
-      <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
-      <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
 
+   <% if user_is_authorized_for_post?(@post) %>
+     <div class="col-md-4">
+       <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
+     </div>
+   <% end %>
+   
    </div>
 </div>
