--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,10 +8,16 @@
  <div class="row">
    <div class="col-md-8">
      <p><%= @post.body %></p>
+     <div>
+       <h3>Comments</h3>
+       <%= render @post.comments %>
+     </div>
+     <% if current_user %>
+       <%= render 'comments/form', comment: Comment.new, post: @post %>
+     <% end %>
    </div>
    <div class="col-md-4">
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
-
    </div>
 </div>
