--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,20 +2,9 @@
 
  <div class="row">
    <div class="col-md-8">
-
-     <% @topics.each do |topic| %>
-       <div class="media">
-         <div class="media-body">
-           <h4 class="media-heading">
-
-             <%= link_to topic.name, topic %>
-           </h4>
-           <small>
-             <%= topic.description %>
-           </small>
-         </div>
-       </div>
-     <% end %>
+      <% @topics.each do |topic| %>
+      <%= render partial: 'topic', locals: {topic: topic} %>
+      <% end %>
    </div>
    <% if user_is_authorized_for_topics? %>
       <div class="col-md-4">
