--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,19 +10,8 @@
       <p class="lead"><%= @topic.description %></p>
 
    <% @topic.posts.each do |post| %>
-      <div class="media">
-         <div class="media-body">
-            <h4 class="media-heading">
-               <%= link_to post.title, topic_post_path(@topic, post) %>
-            </h4>
-            <small>
-               submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-               <%= post.comments.count %> Comments
-            </small>
-         </div>
-      </div>
-   <% end %>
-
+      <%= render partial: 'posts/post', locals: {post: post} %>
+      <% end %>
    </div>
    <% if current_user %>
       <div class="col-md-4">
