--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,10 @@
     <% end %>
 
     <div class="form-group">
+     <%= render partial: 'labels/form', locals: { f: f, topic: @topic, labels: @post.labels } %>
+   </div>
+
+    <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
     <% end %>
