--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,33 @@
 <h1>
    <%= @post.title %> <br>
    <small>
-     submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+   submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
    </small>
- </h1>
+</h1>
+   <div class="row">
+      <div class="col-md-8">
+         <%= render partial: "labels/list", locals: { labels: @post.labels } %>
+         <br />
+      </div>
+   </div>
+      <br />
 
- <div class="row">
-   <div class="col-md-8">
-     <p><%= @post.body %></p>
-     <div>
-       <h3>Comments</h3>
-       <%= render @post.comments %>
-     </div>
-     <% if current_user %>
-       <%= render 'comments/form', comment: Comment.new, post: @post %>
-     <% end %>
+   <div class="row">
+      <div class="col-md-8">
+         <p><%= @post.body %></p>
+
+         <div>
+            <h3>Comments</h3>
+            <%= render @post.comments %>
+         </div>
+
+         <% if current_user %>
+         <%= render 'comments/form', comment: Comment.new, post: @post %>
+         <% end %>
+
+      </div>
+      <div class="col-md-4">
+         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+         <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
+      </div>
    </div>
-   <div class="col-md-4">
-      <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
-      <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
-   </div>
-</div>
