--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -9,18 +9,24 @@
        <li>Smile when you type.</li>
      </ul>
    </div>
+
    <div class="col-md-8">
      <%= form_for @topic do |f| %>
        <div class="form-group">
          <%= f.label :name %>
          <%= f.text_field :name, class: 'form-control', placeholder: "Enter topic name" %>
        </div>
+
        <div class="form-group">
          <%= f.label :description %>
          <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter topic description" %>
        </div>
-       <div class="form-group">
 
+       <div class="form-group">
+         <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
+       </div>
+ 
+       <div class="form-group">
          <%= f.label :public, class: 'checkbox' do %>
            <%= f.check_box :public %> Public topic
          <% end %>
