--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -16,6 +16,7 @@
    <% @topic.posts.each do |post| %>
       <div class="media">
          <div class="media-body">
+             <%= render partial: 'votes/voter', locals: { post: post } %>
             <h4 class="media-heading">
                <%= link_to post.title, topic_post_path(@topic, post) %>
                <%= render partial: "labels/list", locals: { labels: post.labels } %>
