--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,6 +13,18 @@
           <%= @topic.description %>
         </p>
 
+      <div>
+         <h3>Comments</h3>
+         <% @topic.comments.each do |comment| %>
+         <%= render partial: 'comments/comment', locals: { parent: @topic, comment: comment } %>
+         <% end %>
+      </div>
+
+         <% if current_user %>
+         <%= render 'comments/form', comment: Comment.new, parent: @topic %>
+         <% end %>
+
+
    <% @topic.posts.each do |post| %>
       <div class="media">
          <div class="media-body">
