--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -16,12 +16,12 @@
       <div>
          <h3>Comments</h3>
          <% @topic.comments.each do |comment| %>
-         <%= render partial: 'comments/comment', locals: { parent: @topic, comment: comment } %>
+         <%= render partial: 'comments/comment', locals: { topic: @topic, comment: comment } %>
          <% end %>
       </div>
 
          <% if current_user %>
-         <%= render 'comments/form', comment: Comment.new, parent: @topic %>
+         <%= render 'comments/form', comment: Comment.new, topic: @topic %>
          <% end %>
 
 
