--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -44,5 +44,8 @@
          </small>
        </div>
      </h3>
+     <% if current_user %>
+       <%= render partial: 'favorites/favorite', locals: { post: @post } %>
+     <% end %>
    </div>
    </div>
