--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,11 +21,15 @@
 
          <div>
             <h3>Comments</h3>
-            <%= render @post.comments %>
+            <div class='js-comments'>
+        <%= render @post.comments %>
+            </div>
          </div>
 
          <% if current_user %>
+         <div class='new-comment'>
          <%= render 'comments/form', comment: Comment.new, post: @post %>
+       </div>
          <% end %>
 
       </div>
