--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -1,7 +1,7 @@
  <% if current_user %>
    <div class="vote-arrows pull-left">
-      <div><%= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up', method: :post %></div>
+      <div><%= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up', id: 'up-vote-icon', method: :post, remote: true %></div>
       <div><strong><%= post.points %></strong></div>
-      <div><%= link_to " ", post_down_vote_path(post), class: 'glyphicon glyphicon-chevron-down', method: :post %></div>
+      <div><%= link_to " ", post_down_vote_path(post), class: 'glyphicon glyphicon-chevron-down',id: 'down-vote-icon', method: :post, remote: true %></div>
     </div>
  <% end %>
